src/parser/Lexer.java
/* Generated By:JJTree&JavaCC: Do not edit this line. Lexer.java */
package parser;

import javax.swing.JFileChooser;
import java.io.File;
import java.io.FileInputStream;
import java.io.Reader;
import java.io.BufferedReader;
import java.io.StringReader;
import java.util.Scanner;
import recovery.*;

public class Lexer/*@bgen(jjtree)*/implements LexerTreeConstants, LexerConstants {/*@bgen(jjtree)*/
  protected static JJTLexerState jjtree = new JJTLexerState();public static boolean errorJumpLine = true;
  public static boolean panicMessages = false;
  public static boolean tree = false;
  public static int errorsCount = 0;

  public static void execute(Lexer analisador) throws ParseException {
    SimpleNode node = analisador.main();
    if(tree) {
      node.dump(" ");
    } else {
      if(errorsCount == 0) {
        System.out.println("--------------------------------------");
        System.out.println("Mas ah indio veio, que escrita bagual!");
        System.out.println("--------------------------------------");
      } else {
        System.out.println("---------------------------------------");
        System.out.println("Corrige essa porqueira ai piazao burro!");
        System.out.println("---------------------------------------");
      }
    }
  }

  public static String getPathFromSelectedFile() throws Throwable {
    System.out.println(">> Tu trata de pega o arquivo ai entao:");
    JFileChooser arquivo = new JFileChooser();
    arquivo.showOpenDialog(null);
    File selected = arquivo.getSelectedFile();
    if(selected == null) throw new Throwable("O tongo veio, cancelou o negocio!");
    return selected.getAbsolutePath();
  }

  public static void extensionCheck(String file) throws Throwable {
    String extension = "";
    int i = file.lastIndexOf('.');
    if (i >= 0) { extension = file.substring(i+1); }
    if(!extension.equals("entrevero"))
    throw new Throwable("Meu favor, nao sabe nem a extensao, bixo buro! Mah use um aquivo \u005c".entrevero\u005c".");
  }

  public static void main(String[] args) {
    try {
      if(args.length == 0) {
        panicMessages = true;
        System.out.println(">> Bota teu codigo ai guri:");
        execute(new Lexer(System.in));
      } else {
                String path = new String();

        if(args[0].contains("t")) {
          tree = true;
        }

        if(args[0].contains("v")) {
          panicMessages = true;
        }

        if(args[0].contains("f")) {

          path = getPathFromSelectedFile();

        } else if(args[0].contains("p")) {
          errorJumpLine = false;
          path = args[1];
        }

        extensionCheck(path);
        execute(new Lexer(new FileInputStream(path)));
      }
    } catch (Throwable e) {
      if(errorJumpLine) System.out.println("");
      System.out.println("DEU RUIM PIA!");
      System.out.println(e.getMessage());
    }
  }

  static public String im(int x) {
    int k;
    String s;
    s = tokenImage[x];
    k = s.lastIndexOf("\u005c"");
    try {
      s = s.substring(1,k);
    } catch (StringIndexOutOfBoundsException e) {}
    return s;
  }

  static Token lastError = null;
  static boolean eof;    // variável que indica se EOF foi alcançado

  // o método abaixo consome tokens até alcançar um que pertença ao conjunto
  // de sincronização
  static void consumeUntil(RecoverySet g, ParseException e, String met) throws ParseException {
    Token tok;
    if(panicMessages) {
      System.out.println();
      System.out.println("*** " + met + " ***");
      System.out.println("     Conjunto de sincroniza\u00e7\u00e3o: " + g);
    }
    if(g == null) throw e; // se o conjunto é null, propaga a exceção
      tok = getToken(1);                  // pega token corrente
    while(!eof) {                       // se não chegou ao fim do arquivo
      if(g.contains(tok.kind)) {        // achou um token no conjunto
        if(panicMessages) {
          System.out.println("     Encontrado token de sincroniza\u00e7\u00e3o: " + im(tok.kind));
        }
        break;
      }
      if(panicMessages) {
        System.out.println("     Ignorando o token: " + im(tok.kind));
      }
      getNextToken();                   // pega próximo token
      tok = getToken(1);
      if(tok.kind == EOF && !g.contains(EOF)) // fim da entrada?
          eof = true;
    }
    if(tok != lastError) {
      if(panicMessages) {
        System.out.println(e.getMessage());
      }

      lastError = tok;
      errorsCount += 1;
    }
    if(eof)
      throw new RuntimeException("Encontrei EOF onde n\u00e3o deveria.");
  }

/* INICIO DO CODIGO RELACIONADO A ANALISE SINTATICA */
  static final public SimpleNode main() throws ParseException {
 /*@bgen(jjtree) main */
  SimpleNode jjtn000 = new SimpleNode(JJTMAIN);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);RecoverySet recovery = Follow.main;
    try {
      try {
        label_1:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case FUNCAO:
          case DEVOLTA:
          case LOQUEANDO:
          case REPETECO:
          case SE:
          case TROVAR:
          case ESCUITAR:
          case FIM_LINHA:
          case REDONDO:
          case QUEBRADO:
          case TROVA:
          case LOGICO:
          case NOME_VARIAVEL:
          case NOME_FUNCAO:
            ;
            break;
          default:
            jj_la1[0] = jj_gen;
            break label_1;
          }
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case DEVOLTA:
          case TROVAR:
          case ESCUITAR:
          case FIM_LINHA:
          case REDONDO:
          case QUEBRADO:
          case TROVA:
          case LOGICO:
          case NOME_VARIAVEL:
          case NOME_FUNCAO:
            linha();
            break;
          case FUNCAO:
          case LOQUEANDO:
          case REPETECO:
          case SE:
            bloco();
            break;
          default:
            jj_la1[1] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PARE_HOME:
          pareHome();
          break;
        case 0:
          fimDeArquivo();
          break;
        default:
          jj_la1[2] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      {if (true) return jjtn000;}
      } catch (ParseException e) {
    consumeUntil(recovery, e, "main");
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

/* OPERADORES */
  static final public void mais() throws ParseException {
 /*@bgen(jjtree) mais */
  SimpleNode jjtn000 = new SimpleNode(JJTMAIS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(MAIS);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void menos() throws ParseException {
 /*@bgen(jjtree) menos */
  SimpleNode jjtn000 = new SimpleNode(JJTMENOS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(MENOS);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void vezes() throws ParseException {
 /*@bgen(jjtree) vezes */
  SimpleNode jjtn000 = new SimpleNode(JJTVEZES);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(VEZES);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void dividido() throws ParseException {
 /*@bgen(jjtree) dividido */
  SimpleNode jjtn000 = new SimpleNode(JJTDIVIDIDO);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(DIVIDIDO);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void elevado() throws ParseException {
 /*@bgen(jjtree) elevado */
  SimpleNode jjtn000 = new SimpleNode(JJTELEVADO);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(ELEVADO);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void resto() throws ParseException {
 /*@bgen(jjtree) resto */
  SimpleNode jjtn000 = new SimpleNode(JJTRESTO);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(RESTO);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void maior() throws ParseException {
 /*@bgen(jjtree) maior */
  SimpleNode jjtn000 = new SimpleNode(JJTMAIOR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(MAIOR);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void menor() throws ParseException {
 /*@bgen(jjtree) menor */
  SimpleNode jjtn000 = new SimpleNode(JJTMENOR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(MENOR);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void maiorIgual() throws ParseException {
 /*@bgen(jjtree) maiorIgual */
  SimpleNode jjtn000 = new SimpleNode(JJTMAIORIGUAL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(MAIOR_IGUAL);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void menorIgual() throws ParseException {
 /*@bgen(jjtree) menorIgual */
  SimpleNode jjtn000 = new SimpleNode(JJTMENORIGUAL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(MENOR_IGUAL);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void igual() throws ParseException {
 /*@bgen(jjtree) igual */
  SimpleNode jjtn000 = new SimpleNode(JJTIGUAL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(IGUAL);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void diferente() throws ParseException {
 /*@bgen(jjtree) diferente */
  SimpleNode jjtn000 = new SimpleNode(JJTDIFERENTE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(DIFERENTE);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void ou() throws ParseException {
 /*@bgen(jjtree) ou */
  SimpleNode jjtn000 = new SimpleNode(JJTOU);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(OU);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void e() throws ParseException {
 /*@bgen(jjtree) e */
  SimpleNode jjtn000 = new SimpleNode(JJTE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(E);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void negacao() throws ParseException {
 /*@bgen(jjtree) negacao */
  SimpleNode jjtn000 = new SimpleNode(JJTNEGACAO);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(NEGACAO);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

/* PALAVRAS RESERVADAS */
  static final public void loqueando() throws ParseException {
 /*@bgen(jjtree) loqueando */
  SimpleNode jjtn000 = new SimpleNode(JJTLOQUEANDO);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(LOQUEANDO);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void repeteco() throws ParseException {
 /*@bgen(jjtree) repeteco */
  SimpleNode jjtn000 = new SimpleNode(JJTREPETECO);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(REPETECO);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void tche() throws ParseException {
 /*@bgen(jjtree) tche */
  SimpleNode jjtn000 = new SimpleNode(JJTTCHE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(TCHE);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void bah() throws ParseException {
 /*@bgen(jjtree) bah */
  SimpleNode jjtn000 = new SimpleNode(JJTBAH);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(BAH);
      jj_consume_token(FIM_LINHA);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void dai() throws ParseException {
 /*@bgen(jjtree) dai */
  SimpleNode jjtn000 = new SimpleNode(JJTDAI);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(DAI);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void de() throws ParseException {
 /*@bgen(jjtree) de */
  SimpleNode jjtn000 = new SimpleNode(JJTDE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(DE);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void ate() throws ParseException {
 /*@bgen(jjtree) ate */
  SimpleNode jjtn000 = new SimpleNode(JJTATE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(ATE);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }
